--- a/style/main.scss
+++ b/style/main.scss
@@ -13,6 +13,7 @@
 @import 'components/featuresBlock';
 @import 'components/module';
 @import 'components/programme';
+@import 'components/loader';
 
 // Layout
 @import 'layout/container';
