--- a/style/layout/_container.scss
+++ b/style/layout/_container.scss
@@ -1,8 +1,9 @@
 .container {
   margin: 0 auto;
-  max-width: 345px;
+  padding: 28px 0 45px;
+  max-width: calc(100vw - 30px);
 
-  @media only screen and (min-width: $desktop-width) {
+  @media only screen and (min-width: 1316px) {
     max-width: 1286px;
   }
 }
