Added error handling

--- a/style/main.css
+++ b/style/main.css
@@ -22,6 +22,17 @@ body {
           box-sizing: border-box;
 }
 
+button {
+  background: transparent;
+  outline: none;
+  border: none;
+}
+
+button::focus, button::active {
+  outline: none;
+  border: none;
+}
+
 @font-face {
   font-family: 'StyreneAWeb';
   src: local("StyreneAWeb"), url("../fonts/StyreneAWeb-Regular.ttf") format("truetype"), url("../fonts/StyreneAWeb-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/StyreneAWeb-Regular.woff") format("woff");
@@ -402,6 +413,18 @@ body {
   }
 }
 
+.error-container {
+  display: none;
+  background-color: #f7f7f7;
+}
+
+.error-container__button {
+  background-color: #ff3535;
+  min-width: 50px;
+  padding: 10px 15px;
+  color: #fff;
+}
+
 .container {
   margin: 0 auto;
   padding: 28px 0 45px;
@@ -424,5 +447,35 @@ body {
     display: -ms-flexbox;
     display: flex;
   }
+}
+
+.programmes-container.error {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.programmes-container.error .error-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 100px;
+  padding: 15px 30px;
+  background-color: #f7f7f7;
 }
 /*# sourceMappingURL=main.css.map */
