--- a/style/main.scss
+++ b/style/main.scss
@@ -14,6 +14,7 @@
 @import 'components/module';
 @import 'components/programme';
 @import 'components/loader';
+@import 'components/errorContainer';
 
 // Layout
 @import 'layout/container';
